jsonplaceholder_callout/setup/objects/JSONPlaceholderUser__c/JSONPlaceholderUser__c.object-meta.xml
<CustomObject>
    <label>JSON Placeholder User</label>
    <nameField>
        <displayFormat>U-{0000}</displayFormat>
        <label>User Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>JSON Placeholder Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject> 