jsonplaceholder_callout/setup/objects/JSONPlaceholderUser__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField> 