jsonplaceholder_callout/setup/objects/JSONPlaceholderUser__c/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <externalId>true</externalId>
    <label>External ID</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>