jsonplaceholder_callout/setup/objects/JSONPlaceholderUser__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField> 